--- a/Billed-app-FR-Front/package.json
+++ b/Billed-app-FR-Front/package.json
@@ -26,11 +26,13 @@
   "devDependencies": {
     "@babel/preset-env": "^7.24.3",
     "@testing-library/dom": "^7.20.0",
-    "@testing-library/jest-dom": "^5.11.0",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/user-event": "^12.0.11",
     "babel-jest": "^26.1.0",
     "jest": "^26.6.3",
     "jest-environment-jsdom": "^27.4.6",
-    "jest-html-reporter": "^3.1.3"
+    "jest-html-reporter": "^3.1.3",
+    "jsdom": "^24.0.0",
+    "text-encoding": "^0.7.0"
   }
 }
