--- a/Billed-app-FR-Front/package.json
+++ b/Billed-app-FR-Front/package.json
@@ -24,11 +24,12 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.24.3",
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
     "@testing-library/dom": "^7.20.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/user-event": "^12.0.11",
-    "babel-jest": "^26.1.0",
+    "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "jest-environment-jsdom": "^27.4.6",
     "jest-html-reporter": "^3.1.3",
